[package]
name = "tokio-tungstenite"
description = "Tokio binding for Tungstenite, the Lightweight stream-based WebSocket implementation"
categories = ["web-programming::websocket", "network-programming", "asynchronous", "concurrency"]
keywords = ["websocket", "io", "web"]
authors = ["Daniel Abramov <dabramov@snapview.de>", "Alexey Galakhov <agalakhov@snapview.de>"]
license = "MIT"
homepage = "https://github.com/snapview/tokio-tungstenite"
documentation = "https://docs.rs/tokio-tungstenite/0.1.2"
repository = "https://github.com/snapview/tokio-tungstenite"
version = "0.1.2"

[dependencies]
futures = "0.1.12"
tokio-io = "0.1.1"
url = "1.4.0"

[dependencies.tungstenite]
version = "0.2.0"
default-features = false # Disables building OpenSSL
features = []

[dev-dependencies]
tokio-core = "0.1.6"
